2016-05-12 0.8.1 alpha
Now channel labels are displayed correctly.
Add an option to change the tint of the chequer board.
Show unsigned integer options in hexadecimal format.
Fixed a crash caused by attemting seeking when no file is
being played.

2016-05-11 0.8.1 alpha
Fixed a bug when piano is hidden but the option "arrange
channels on a stair" is enabled.
Fixed a crash caused by the visualization plugin.
Add channel label display. However it's still buggy so it's
currently disabled.

2016-05-09 0.8.1 alpha
Add visualization documentaion stub.

2016-05-07 0.8.1 alpha
Added two new options.
Fixed several crashes related to options without a description.
Sanitise deinitialize order again.
Fixed several memory leaks.

2016-05-06 0.8.1 alpha
Use new SMELT rendering API for notes drawing.
Deinitialize classes in a correct order to avoid crashes.
Add background image option.
Add FPS-related options.
Use QLineEdit instead of QPlainTextEdit for strings.

2016-05-05 0.8.1 pre
Use the new SMELT rendering API.

2016-05-04 0.8.1 pre
Piano keyboard: first steps.

2016-05-03 0.8.0 beta
Finish option proxying for all types.
Add more options for the visualization plugin.
Bump version to 0.8.0.
Package the visualization plugin for debian.

2016-05-02 0.7.8 beta
Finally finished the option proxying infrastructure...

2016-05-01 0.7.8 beta
Give the visualization a clearer look...
Now highlights playing notes.
Avoid a crash in file reading.

2016-04-30 0.7.8 beta
Fixed a bug in RPN handling.

2016-04-29 0.7.8 beta
Update documentation.
Added two missing option proxy function...

2016-04-28 0.7.8 beta
List plugins in settings window.
Plugins can be disabled now.

2016-04-27 0.7.8 beta
Show file name in window title.
Handle pitch bend in visualization.
Handle mute and solo in the default visualization.
A little plugin sdk documentaion...
Remove stupid things.

2016-04-26 0.7.8 beta
Now the default visualization plugin works as expected.
Avoid null pointers in the API implementation.
