@@ -1,3 +1,7 @@
+2016-05-13 0.8.1 alpha
+Added enumerate integer options support.
+Workaroud for different fonts locations in arch linux.
+
 2016-05-12 0.8.1 alpha
 Now channel labels are displayed correctly.
 Add an option to change the tint of the chequer board.
